--- a/main/src/Home/Home.module.css
+++ b/main/src/Home/Home.module.css
@@ -1,6 +1,7 @@
 .card{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color:cornflowerblue;
     padding: 15px;
     height: 40px;
