--- a/main/src/Pagination2/Pagenation2.module.css
+++ b/main/src/Pagination2/Pagenation2.module.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     padding:10px;
-    height: 40px;
+    height: 30px;
+    align-items: center;
 }
 
 .main{
